--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^8.0.15",
+    "@types/uuid": "^3.4.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "ts-node": "^3.2.1",
     "typescript": "^2.4.2"
+  },
+  "dependencies": {
+    "osc-min": "^1.1.1",
+    "uuid": "^3.1.0"
   }
 }
