--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "ableton-js",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "./sdk/index.ts",
   "scripts": {
     "start": "npm-run-all --parallel device sdk",
     "device": "cd device && tsc --watch",
