--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "npm-run-all --parallel device sdk",
     "device": "cd device && tsc --watch",
-    "sdk": "nodemon"
+    "sdk": "nodemon",
+    "build": "cd sdk && tsc --watch --outDir ../dist --declaration true"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,6 @@
   "dependencies": {
     "osc-min": "^1.1.1",
     "uuid": "^3.1.0"
-  }
+  },
+  "types": "dist/index.d.ts"
 }
